WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193652
DoesGC rule is wrong for nodes with BigIntUse
https://bugs.webkit.org/show_bug.cgi?id=193652
Summary
DoesGC rule is wrong for nodes with BigIntUse
Caio Lima
Reported
2019-01-21 04:50:59 PST
...
Attachments
Patch
(4.84 KB, patch)
2019-01-21 11:58 PST
,
Caio Lima
no flags
Details
Formatted Diff
Diff
Benchmarks
(95.75 KB, text/plain)
2019-01-21 12:23 PST
,
Caio Lima
no flags
Details
Patch
(4.80 KB, patch)
2019-01-21 12:30 PST
,
Caio Lima
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Caio Lima
Comment 1
2019-01-21 11:58:35 PST
Created
attachment 359701
[details]
Patch
Saam Barati
Comment 2
2019-01-21 12:12:02 PST
Comment on
attachment 359701
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=359701&action=review
r=me
> Source/JavaScriptCore/dfg/DFGDoesGC.cpp:388 > + return node->binaryUseKind() == BigIntUse;
Might as well return true here. Because the clobberize check above, we won’t reach here. However, it’s nicer just to say true IMO
Caio Lima
Comment 3
2019-01-21 12:23:31 PST
Created
attachment 359704
[details]
Benchmarks Patch seems to be perf neutral on macOS x86_64.
Caio Lima
Comment 4
2019-01-21 12:28:57 PST
Comment on
attachment 359701
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=359701&action=review
Thank you for the review!
>> Source/JavaScriptCore/dfg/DFGDoesGC.cpp:388 >> + return node->binaryUseKind() == BigIntUse; > > Might as well return true here. Because the clobberize check above, we won’t reach here. However, it’s nicer just to say true IMO
Makes sense. Changed.
Caio Lima
Comment 5
2019-01-21 12:30:59 PST
Created
attachment 359705
[details]
Patch
WebKit Commit Bot
Comment 6
2019-01-21 15:57:31 PST
Comment on
attachment 359705
[details]
Patch Clearing flags on attachment: 359705 Committed
r240244
: <
https://trac.webkit.org/changeset/240244
>
WebKit Commit Bot
Comment 7
2019-01-21 15:57:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2019-01-21 15:58:28 PST
<
rdar://problem/47433654
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug