DoesGC rule is wrong for nodes with BigIntUse https://bugs.webkit.org/show_bug.cgi?id=193652

Reviewed by Saam Barati.

JSTests:

* stress/big-int-value-op-update-gc-rules.js: Added.
(assert):
(doesGCAdd):
(doesGCSub):
(doesGCDiv):
(doesGCMul):
(doesGCBitAnd):
(doesGCBitOr):
(doesGCBitXor):

Source/JavaScriptCore:

Former rule was that ValueOp does not GC. However this is wrong, since
these operations can trigger GC and mess up memory management. In the end, this
will generate wrong code because we will have wrong GC epoch value during
Store Barrier Insertion phase.
We changed this to consider BigIntUse for such nodes and properly return true when
they are BigIntUse.

* dfg/DFGDoesGC.cpp:
(JSC::DFG::doesGC):


Canonical link: https://commits.webkit.org/208166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240244 268f45cc-cd09-0410-ab3c-d52691b4dbfc